fix for mirador z-index

--- a/web/themes/custom/asulib_barrio/scss/style.scss
+++ b/web/themes/custom/asulib_barrio/scss/style.scss
@@ -295,3 +295,8 @@ ul.pagination {
 #captcha img {
   width: auto;
 }
+
+// mirador fixes
+.MuiAppBar-root {
+  z-index: 1009 !important;
+}
